added button for video

--- a/index.html
+++ b/index.html
@@ -4,42 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Care e solutia?</title>
 </head>
 
 <body>
     <h1 id="h">Buna seara!</h1>
+    <button id="start">Incepeti!</button><br>
     <video src="alo.mp4" id="video" autoplay></video> <br>
     <input type="text" id="solutia" disabled>
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-        #solutia {
-            display: inline-block;
-            margin: 20px;
-            background-color: rgb(0, 168, 168);
-            width: 375px;
-            height: 50px;
-            font-size: 25px;
-            border-radius: 20px;
-            border: solid darkcyan 2px;
-        }
-
-        body {
-            text-align: center;
-            background-color: cyan;
-            font-family: "Raleway", serif;
-            font-optical-sizing: auto;
-            font-weight: 300;
-            font-style: normal;
-        }
-
-        #video {
-            border-radius: 20px;
-            border: solid darkcyan 2px;
-        }
-    </style>
 
     <script src="script.js"></script>
 </body>
