added input placeholder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="h">Buna seara!</h1>
     <button id="start">Incepeti!</button><br>
     <video src="alo.mp4" id="video" autoplay></video> <br>
-    <input type="text" id="solutia" disabled>
+    <input type="text" id="solutia" disabled placeholder="P____?">
 
     <script src="script.js"></script>
 </body>
