--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 id="h">Buna seara!</h1>
     <button id="start">Incepeti!</button><br>
-    <video src="alo.mp4" id="video" controls="none"></video> <br>
+    <video src="alo.mp4" id="video" playsinline controls></video> <br>
     <input type="text" id="solutia" disabled>
 
     <script src="script.js"></script>
